--- a/app/index.html
+++ b/app/index.html
@@ -77,6 +77,23 @@
       </div>
     </div>
 
+      <div>
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+        <li>4</li>
+        <li>5</li>
+        <li>6</li>
+        <li>7</li>
+        <li>8</li>
+        <li>9</li>
+        <li>10</li>
+        <li>11</li>
+        <li>12</li>
+
+      </div>
+
+
     <div id="our-beginning" class="page-section">
       <div class="wrapper">
         <h2 class="headline headline--centered headline--light headline--b-margin-small">
